Fix: Overflow should not result in ellipsis for split arrow button
DD-2791

--- a/css/buttons.bootstrap.scss
+++ b/css/buttons.bootstrap.scss
@@ -71,6 +71,7 @@ div.dt-buttons {
 					line-height: 1rem;
 					color: rgb(33, 37, 41);
 					padding: 0 16px;
+					overflow: visible;
 
 					&:hover {
 						color: #16181b;
@@ -110,6 +111,7 @@ div.dt-buttons {
 	div.dt-button-split {
 		button:last-child span {
 			margin-left: 0 !important;
+			overflow: visible;
 		}
 	}
 }
