--- a/css/buttons.bootstrap4.scss
+++ b/css/buttons.bootstrap4.scss
@@ -37,6 +37,7 @@ div.dt-buttons {
 				line-height: 1rem;
 				color: rgb(33, 37, 41);
 				padding: 0 16px;
+				overflow: visible;
 
 				&:hover {
 					color: #16181b;
