--- a/css/buttons.jqueryui.scss
+++ b/css/buttons.jqueryui.scss
@@ -86,6 +86,7 @@ div.dt-button-split {
 		padding: .4em 1em;
 		width: 24px;
 		margin-left: -1px;
+		overflow: visible;
 
 		span {
 			margin-left: -7px;
